--- a/app.html
+++ b/app.html
@@ -282,7 +282,7 @@ body {
         icon: "abbyy.png",
         link: "https://koha2002-my.sharepoint.com/:f:/g/personal/koha_koha_io_vn/Ej8_ZcwsXOpIrTqTCtQfg6oB2MR5UGX6a_sQ2X3xM5XvFA?e=G9jv5T",
         desc: "ABBYY FineReader PDF 15 là một công cụ PDF phổ biến để quản lý tài liệu tại nơi làm việc ảo. Được hỗ trợ bởi các công nghệ OCR dựa trên AI của ABBYY và các công nghệ chuyển đổi tài liệu, FineReader giúp thông tin được khóa trong các tài liệu có thể kiện và giúp nâng cao năng suất của doanh nghiệp.",
-        price: "Miễn phí"
+        price: "$99/Year"
       },
             {
         name: "Soon",
