--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <div class="feature-title">Test code</div>
         <div class="feature-desc">Soon.</div>
       </a>
-      <a class="feature" href="tu-moi.html">
+      <a class="feature" href="onthi.html">
         <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
-        <div class="feature-title">Soon </div>
-        <div class="feature-desc">Soon.</div>
+        <div class="feature-title">Ôn thi </div>
+        <div class="feature-desc">Phần mềm luyện thi và ôn tập đề thi. Tương tự Quizizz.</div>
       </a>
     </div>
   </main>
