--- a/test.html
+++ b/test.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Vui - Tạo và Chơi</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <style>
+  <meta charset="UTF-8">
+  <title>Danh sách Ứng dụng</title>
+  <link rel="icon" type="image/png" href="logo.png">
+  <style>
+    html, body {
+      height:100%;
+      margin:0;
+      padding:0;
+    }
         body {
             font-family: 'Be Vietnam Pro', sans-serif;
             background-color: #f0f2f5;
