--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="feature-title">Ôn thi </div>
         <div class="feature-desc">Phần mềm luyện thi và ôn tập đề thi. Tương tự Quizizz.</div>
       </a>
-      <a class="feature" href="onthi.html">
+      <a class="feature" href="soon.html">
         <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
         <div class="feature-title">Soon </div>
         <div class="feature-desc">Soon</div>
