--- a/onthi.html
+++ b/onthi.html
@@ -8,7 +8,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" xintegrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         body {
             font-family: 'Be Vietnam Pro', sans-serif;
@@ -106,7 +106,7 @@
             <div id="home-screen" class="card p-8 rounded-2xl shadow-2xl text-black">
                 <div class="text-center flex-shrink-0">
                     <i class="fas fa-rocket text-5xl text-purple-500 mb-4"></i>
-                    <h1 class="text-4xl font-bold mb-2">Chào mừng đến Quiz Vui!</h1>
+                    <h1 class="text-4xl font-bold mb-2">Chào mừng đến với ôn thi cùng Quiz </h1>
                     <p class="text-lg text-black mb-6">Chọn một quiz để bắt đầu hoặc tạo quiz của riêng bạn.</p>
                 </div>
                 <div class="my-8 flex-grow flex flex-col min-h-0">
